DB test complete

--- a/guestNHN2/WebContent/WEB-INF/web.xml
+++ b/guestNHN2/WebContent/WEB-INF/web.xml
@@ -22,7 +22,7 @@ id="WebApp_ID" version="2.5">
     
 <servlet-mapping>     
     <servlet-name>spring</servlet-name>     
-    <url-pattern>*.html</url-pattern>    
+    <url-pattern>*.nhn</url-pattern>    
 </servlet-mapping>  
     
 </web-app>   
